--- a/OskitBlazor/Components/Identity/Pages/Auth/Register.razor
+++ b/OskitBlazor/Components/Identity/Pages/Auth/Register.razor
@@ -1,4 +1,5 @@
-﻿@page "/auth/signup"
+﻿@page "/auth/register"
+@attribute [AllowAnonymous]
 
 @using System.ComponentModel.DataAnnotations
 @using System.Text
