--- a/OskitBlazor/Components/Identity/Pages/Auth/_Imports.razor
+++ b/OskitBlazor/Components/Identity/Pages/Auth/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿
-@using OskitBlazor.Components.Identity.Shared
-@using Microsoft.FluentUI.AspNetCore.Components
+@layout AuthLayout
 
-@layout AccountLayout
+@using OskitBlazor.Components.Identity.Shared
+@using OskitBlazor.Components.Identity.Pages.Auth
+@using Microsoft.FluentUI.AspNetCore.Components
