--- a/OskitBlazor/Components/_Imports.razor
+++ b/OskitBlazor/Components/_Imports.razor
@@ -9,6 +9,9 @@
 @using Microsoft.JSInterop
 @using OskitBlazor
 @using OskitBlazor.Components
-@using OskitBlazor.Models.Entity.IdentitySpace 
+@using OskitBlazor.Models.Entity.IdentitySpace
 @using Microsoft.FluentUI.AspNetCore.Components
 @using Microsoft.AspNetCore.Authorization
+@using OskitBlazor.Components.Identity.Pages.Auth
+
+@attribute [Authorize]
